updated js file

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1 class="header_banana">banana talk</h1>
 
     <div>
-        <textarea class="txt_input">Please enter you text in English...</textarea>
+        <textarea class="txt_input" placeholder="Please enter you text in English..."></textarea>
     </div>
 
     <button id="btn_input">Translate to Banana</button>
 
     <div class="output_banana">Translaton will come here 👇</div>
-    <div class="txt_input txt_output"></div>
+    <div class="txt_output txt_input"></div>
 
     <footer class="header_banana footer_banana">
         <div class="footer-head">about</div>
