fix: fixed syntax error in JS file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <textarea class="txt_input" placeholder="Please enter you text in English..."></textarea>
     </div>
 
-    <button id="btn_input">Translate to Banana</button>
+    <button id="btn_input">Translate</button>
 
     <div class="output_banana">Translaton will come here 👇</div>
     <div class="txt_output txt_input"></div>
