--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,19 @@
     <link rel="stylesheet" href="styles.css">
     <title>banana talk</title>
 </head>
+
 <body id="banana_talk">
     <h1 class="header_banana">banana talk</h1>
 
-    <div>
-        <textarea class="txt_input" placeholder="Please enter you text in English..."></textarea>
-    </div>
+    <main class="centered-container">
+        <textarea class="txtInOut" placeholder="Please enter you text in English..."></textarea>
 
-    <button id="btn_input">Translate</button>
+        <button id="btn_input">Translate</button>
 
-    <div class="output_banana">Translaton will come here 👇</div>
-    <div class="txt_output txt_input"></div>
+        <div class="output_banana">Translaton will come here 👇</div>
+
+        <div class="txt_output txtInOut"></div>
+    </main>
 
     <footer class="header_banana footer_banana">
         <div class="footer-head">about</div>
@@ -26,4 +29,5 @@
 
     <script src="app.js" type="text/javascript"></script>
 </body>
+
 </html>
