updated style and API

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="banana_talk">
-    <h1 class="header_banana">banana talk</h1>
+    <h1 class="header_banana">minion talk</h1>
 
     <main class="centered-container">
         <textarea class="txtInOut" placeholder="Please enter you text in English..."></textarea>
